s1-fw/t1/mylib/testout.txt
   Compiling mylib v0.1.0 (/home/vuos/code/p1/s1-fw/t1/mylib)
error[E0616]: field `name` of struct `TableSchema` is private
  --> tests/integration.rs:40:47
   |
40 |         app = app.nest(&format!("/{}", schema.name), table_router.with_state(state));
   |                                               ^^^^ private field

error[E0616]: field `name` of struct `TableSchema` is private
   --> tests/integration.rs:101:47
    |
101 |         app = app.nest(&format!("/{}", schema.name), table_router.with_state(state));
    |                                               ^^^^ private field

error[E0616]: field `name` of struct `TableSchema` is private
   --> tests/integration.rs:155:47
    |
155 |         app = app.nest(&format!("/{}", schema.name), table_router.with_state(state));
    |                                               ^^^^ private field

For more information about this error, try `rustc --explain E0616`.
error: could not compile `mylib` (test "integration") due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
